--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_chosen_content">ChosenContentActivity</string>
+    <string name="title_activity_top_user_content">TopUserContentActivity</string>
 </resources>
